Added tires/model and tires/type endpoints
