# src/Api/Controller/TireControllerProvider.php
@@ -12,12 +12,20 @@ class TireControllerProvider implements ControllerProviderInterface, ServiceProv
 {
     public function register(Container $app)
     {
+        $app['tire.brandcontroller'] = function () use ($app) {
+            return new Tire\BrandController($app['model.tire.brand']);
+        };
+
+        $app['tire.modelcontroller'] = function () use ($app) {
+            return new Tire\ModelController($app['model.tire.model']);
+        };
+
         $app['tire.sizecontroller'] = function () use ($app) {
             return new Tire\SizeController($app['model.tire.size']);
         };
 
-        $app['tire.brandcontroller'] = function () use ($app) {
-            return new Tire\BrandController($app['model.tire.brand']);
+        $app['tire.typecontroller'] = function () use ($app) {
+            return new Tire\TypeController($app['model.tire.type']);
         };
 
         $app->mount('/', new $this);
@@ -28,7 +36,9 @@ class TireControllerProvider implements ControllerProviderInterface, ServiceProv
         $controllers = $app['controllers_factory'];
 
         $controllers->post('/tires/brand', 'tire.brandcontroller:register');
+        $controllers->post('/tires/model', 'tire.modelcontroller:register');
         $controllers->post('/tires/size', 'tire.sizecontroller:register');
+        $controllers->post('/tires/type', 'tire.typecontroller:register');
 
         return $controllers;
     }
